# benchmark-api

./: .gitignore  analyze-results.sh  docker-compose.yaml  run-benchmark-io.sh  run-benchmark.sh
database/: init.sql
fastapi/: Dockerfile  main.py  requirements.txt
go/: Dockerfile  go.mod  main.go
go-fiber/: Dockerfile  go.mod  main.go
go-gin/: go.mod  main.go
k6/: load-test-io.js  load-test.js
litestar/: Dockerfile  main.py  requirements.txt
robyn/: Dockerfile  main.py  requirements.txt
rust/: Cargo.toml  Dockerfile
rust/src/: main.rs
